--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-﻿certifi @ file:///C:/b/abs_85o_6fm0se/croot/certifi_1671487778835/work/certifi
-click==8.1.3
+﻿click==8.1.3
 colorama==0.4.6
 Flask==2.2.2
 importlib-metadata==5.2.0
